--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -7,3 +7,5 @@ libsdl_a_SOURCES = sound.cpp timer.cpp graphics.cpp events.cpp
 EXTRA_DIST = events.cpp graphics.cpp graphics.h timer.cpp sound.cpp sound.h 
 
 ####### kdevelop will overwrite this part!!! (end)############
+
+CXXFLAGS = -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
