Fixed a bug in movement

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -76,7 +76,7 @@ EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialo
 
 ####### kdevelop will overwrite this part!!! (end)############
 
-CXXFLAGS = -Dsgmain -I./ -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
+CXXFLAGS = -O3 -g -I./ -Dsgmain -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
