--- a/source/mapedit/Makefile.in
+++ b/source/mapedit/Makefile.in
@@ -66,7 +66,7 @@ PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
-CXXFLAGS = @CXXFLAGS@ -Usgmain -Dkarteneditor -I./ -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
+CXXFLAGS = @CXXFLAGS@ -O3 -g -Usgmain -Dkarteneditor -I./ -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
 
 bin_PROGRAMS = mapedit
 
