--- a/source/tools/linux/Makefile
+++ b/source/tools/linux/Makefile
@@ -66,7 +66,7 @@ PACKAGE = asc
 RANLIB = ranlib
 VERSION = 0.1
 
-CXXFLAGS = -g -O2 -Usgmain -Dconverter
+CXXFLAGS = -g -O2 -Dconverter
 
 bin_PROGRAMS = demount ascmount
 
