--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -66,7 +66,7 @@ PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
-CXXFLAGS = @CXXFLAGS@ -Usgmain -Dconverter
+CXXFLAGS = @CXXFLAGS@ -Dconverter
 
 bin_PROGRAMS = demount ascmount
 
