--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -65,12 +65,12 @@ RANLIB = @RANLIB@
 VERSION = @VERSION@
 
 bin_PROGRAMS = asc
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp 
+asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp
 asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 
 SUBDIRS = docs sdl libs mapedit tools
 
-EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadjpg.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h unitctrl.cpp unitctrl.h 
+EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadjpg.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h unitctrl.cpp unitctrl.h artint.cpp
 
 CXXFLAGS = @CXXFLAGS@ -I./ -Dsgmain -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -87,7 +87,7 @@ asc_OBJECTS =  unitctrl.o soundList.o weather.o typen.o strtmesg.o \
 stack.o spfst.o sgstream.o sg.o pd.o palette.o newfont.o network.o \
 missions.o misc.o loadpcxc.o loadjpg.o loaders.o loadbi3.o gui.o \
 gamedlg.o dlg_box.o dialog.o controls.o building.o basestrm.o basegfx.o \
-attack.o
+attack.o artint.o
 asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a
 asc_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -101,13 +101,14 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-DEP_FILES =  .deps/attack.P .deps/basegfx.P .deps/basestrm.P \
-.deps/building.P .deps/controls.P .deps/dialog.P .deps/dlg_box.P \
-.deps/gamedlg.P .deps/gui.P .deps/loadbi3.P .deps/loaders.P \
-.deps/loadjpg.P .deps/loadpcxc.P .deps/misc.P .deps/missions.P \
-.deps/network.P .deps/newfont.P .deps/palette.P .deps/pd.P .deps/sg.P \
-.deps/sgstream.P .deps/soundList.P .deps/spfst.P .deps/stack.P \
-.deps/strtmesg.P .deps/typen.P .deps/unitctrl.P .deps/weather.P
+DEP_FILES =  .deps/artint.P .deps/attack.P .deps/basegfx.P \
+.deps/basestrm.P .deps/building.P .deps/controls.P .deps/dialog.P \
+.deps/dlg_box.P .deps/gamedlg.P .deps/gui.P .deps/loadbi3.P \
+.deps/loaders.P .deps/loadjpg.P .deps/loadpcxc.P .deps/misc.P \
+.deps/missions.P .deps/network.P .deps/newfont.P .deps/palette.P \
+.deps/pd.P .deps/sg.P .deps/sgstream.P .deps/soundList.P .deps/spfst.P \
+.deps/stack.P .deps/strtmesg.P .deps/typen.P .deps/unitctrl.P \
+.deps/weather.P
 SOURCES = $(asc_SOURCES)
 OBJECTS = $(asc_OBJECTS)
 
