--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -65,7 +65,7 @@ RANLIB = @RANLIB@
 VERSION = @VERSION@
 
 bin_PROGRAMS = asc
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp
+asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp
 asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 
 SUBDIRS = docs sdl libs mapedit tools
@@ -87,7 +87,8 @@ asc_OBJECTS =  unitctrl.o soundList.o weather.o typen.o strtmesg.o \
 stack.o spfst.o sgstream.o sg.o pd.o palette.o newfont.o network.o \
 missions.o misc.o loadpcxc.o loadjpg.o loaders.o loadbi3.o gui.o \
 gamedlg.o dlg_box.o dialog.o controls.o building.o basestrm.o basegfx.o \
-attack.o artint.o
+attack.o artint.o CLoadable.o Property.o PropertyGroup.o gameoptions.o \
+Named.o
 asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a
 asc_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -101,14 +102,15 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-DEP_FILES =  .deps/artint.P .deps/attack.P .deps/basegfx.P \
+DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
+.deps/PropertyGroup.P .deps/artint.P .deps/attack.P .deps/basegfx.P \
 .deps/basestrm.P .deps/building.P .deps/controls.P .deps/dialog.P \
-.deps/dlg_box.P .deps/gamedlg.P .deps/gui.P .deps/loadbi3.P \
-.deps/loaders.P .deps/loadjpg.P .deps/loadpcxc.P .deps/misc.P \
-.deps/missions.P .deps/network.P .deps/newfont.P .deps/palette.P \
-.deps/pd.P .deps/sg.P .deps/sgstream.P .deps/soundList.P .deps/spfst.P \
-.deps/stack.P .deps/strtmesg.P .deps/typen.P .deps/unitctrl.P \
-.deps/weather.P
+.deps/dlg_box.P .deps/gamedlg.P .deps/gameoptions.P .deps/gui.P \
+.deps/loadbi3.P .deps/loaders.P .deps/loadjpg.P .deps/loadpcxc.P \
+.deps/misc.P .deps/missions.P .deps/network.P .deps/newfont.P \
+.deps/palette.P .deps/pd.P .deps/sg.P .deps/sgstream.P \
+.deps/soundList.P .deps/spfst.P .deps/stack.P .deps/strtmesg.P \
+.deps/typen.P .deps/unitctrl.P .deps/weather.P
 SOURCES = $(asc_SOURCES)
 OBJECTS = $(asc_OBJECTS)
 
