--- a/source/mapedit/Makefile.in
+++ b/source/mapedit/Makefile.in
@@ -68,10 +68,10 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
 
-bin_PROGRAMS = mapedit
+bin_PROGRAMS = ascmapedit
 
-mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp
-mapedit_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
+ascmapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp
+ascmapedit_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../config.h
 CONFIG_CLEAN_FILES = 
@@ -82,13 +82,14 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I../..
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-mapedit_OBJECTS =  edevents.o edgen.o edglobal.o edmain.o edselfnt.o \
+ascmapedit_OBJECTS =  edevents.o edgen.o edglobal.o edmain.o edselfnt.o \
 edmisc.o weather.o typen.o strtmesg.o stack.o spfst.o sgstream.o pd.o \
 palette.o newfont.o misc.o loadpcxc.o loadjpg.o loaders.o loadbi3.o \
 dlg_box.o dialog.o basestrm.o basegfx.o attack.o CLoadable.o Property.o \
 PropertyGroup.o gameoptions.o Named.o
-mapedit_DEPENDENCIES =  ../sdl/libsdl.a ../libs/triangul/libtriangul.a
-mapedit_LDFLAGS = 
+ascmapedit_DEPENDENCIES =  ../sdl/libsdl.a \
+../libs/triangul/libtriangul.a
+ascmapedit_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
@@ -107,8 +108,8 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/loadpcxc.P .deps/misc.P .deps/newfont.P .deps/palette.P \
 .deps/pd.P .deps/sgstream.P .deps/spfst.P .deps/stack.P \
 .deps/strtmesg.P .deps/typen.P .deps/weather.P
-SOURCES = $(mapedit_SOURCES)
-OBJECTS = $(mapedit_OBJECTS)
+SOURCES = $(ascmapedit_SOURCES)
+OBJECTS = $(ascmapedit_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -162,9 +163,9 @@ distclean-compile:
 
 maintainer-clean-compile:
 
-mapedit: $(mapedit_OBJECTS) $(mapedit_DEPENDENCIES)
-	@rm -f mapedit
-	$(CXXLINK) $(mapedit_LDFLAGS) $(mapedit_OBJECTS) $(mapedit_LDADD) $(LIBS)
+ascmapedit: $(ascmapedit_OBJECTS) $(ascmapedit_DEPENDENCIES)
+	@rm -f ascmapedit
+	$(CXXLINK) $(ascmapedit_LDFLAGS) $(ascmapedit_OBJECTS) $(ascmapedit_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
 
