--- a/source/docs/en/Makefile.in
+++ b/source/docs/en/Makefile.in
@@ -64,6 +64,9 @@ CXX = @CXX@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+SDL_CFLAGS = @SDL_CFLAGS@
+SDL_CONFIG = @SDL_CONFIG@
+SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
 EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 
