--- a/source/tools/linux/Makefile.am
+++ b/source/tools/linux/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.3 2000-07-31 18:02:55 mbickel Exp $
+## $Id: Makefile.am,v 1.4 2000-08-03 19:21:42 mbickel Exp $
 
 vpath %.cpp ..:../..
 
@@ -11,6 +11,9 @@ bin_PROGRAMS = ascdemount ascmount
 ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp
 
 ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp
+
+ascmount_LDADD   = -lSDL
+ascdemount_LDADD   = -lSDL
 
 # vim: noexpandtab ai
 
