--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -64,6 +64,9 @@ CXX = @CXX@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+SDL_CFLAGS = @SDL_CFLAGS@
+SDL_CONFIG = @SDL_CONFIG@
+SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
@@ -73,6 +76,9 @@ bin_PROGRAMS = ascdemount ascmount
 ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp
 
 ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp
+
+ascmount_LDADD = -lSDL
+ascdemount_LDADD = -lSDL
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -84,11 +90,9 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 ascdemount_OBJECTS =  demount.o basestrm.o misc.o
-ascdemount_LDADD = $(LDADD)
 ascdemount_DEPENDENCIES = 
 ascdemount_LDFLAGS = 
 ascmount_OBJECTS =  mount.o basestrm.o misc.o
-ascmount_LDADD = $(LDADD)
 ascmount_DEPENDENCIES = 
 ascmount_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
