--- a/source/mapedit/Makefile.in
+++ b/source/mapedit/Makefile.in
@@ -73,7 +73,7 @@ CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DHEXAGON -DFREEMAPZOOM -funsigned-cha
 
 bin_PROGRAMS = ascmapedit
 
-ascmapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp
+ascmapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp
 ascmapedit_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../config.h
@@ -87,8 +87,8 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 ascmapedit_OBJECTS =  edevents.o edgen.o edglobal.o edmain.o edselfnt.o \
 edmisc.o weather.o typen.o strtmesg.o stack.o spfst.o sgstream.o pd.o \
-palette.o newfont.o misc.o loadpcxc.o loadjpg.o loaders.o loadbi3.o \
-dlg_box.o dialog.o basestrm.o basegfx.o attack.o CLoadable.o Property.o \
+palette.o newfont.o misc.o loadpcxc.o loaders.o loadbi3.o dlg_box.o \
+dialog.o basestrm.o basegfx.o attack.o CLoadable.o Property.o \
 PropertyGroup.o gameoptions.o Named.o
 ascmapedit_DEPENDENCIES =  ../sdl/libsdl.a \
 ../libs/triangul/libtriangul.a
@@ -107,10 +107,10 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/attack.P .deps/basegfx.P .deps/basestrm.P \
 .deps/dialog.P .deps/dlg_box.P .deps/edevents.P .deps/edgen.P \
 .deps/edglobal.P .deps/edmain.P .deps/edmisc.P .deps/edselfnt.P \
-.deps/gameoptions.P .deps/loadbi3.P .deps/loaders.P .deps/loadjpg.P \
-.deps/loadpcxc.P .deps/misc.P .deps/newfont.P .deps/palette.P \
-.deps/pd.P .deps/sgstream.P .deps/spfst.P .deps/stack.P \
-.deps/strtmesg.P .deps/typen.P .deps/weather.P
+.deps/gameoptions.P .deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P \
+.deps/misc.P .deps/newfont.P .deps/palette.P .deps/pd.P \
+.deps/sgstream.P .deps/spfst.P .deps/stack.P .deps/strtmesg.P \
+.deps/typen.P .deps/weather.P
 SOURCES = $(ascmapedit_SOURCES)
 OBJECTS = $(ascmapedit_OBJECTS)
 
