Fixed building: moveunitdown  changed loadimage to use standard SDL_image

--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -1,7 +1,7 @@
 ####### kdevelop will overwrite this part!!! (begin)##########
 noinst_LIBRARIES = libsdl.a
 
-libsdl_a_SOURCES = sound.cpp timer.cpp graphics.cpp events.cpp SDLStretch.cpp loadimage.cpp
+libsdl_a_SOURCES = sound.cpp timer.cpp graphics.cpp events.cpp SDLStretch.cpp loadimage.cpp asc_IMG_jpg.c
 
 
 EXTRA_DIST = events.cpp graphics.cpp graphics.h timer.cpp sound.cpp sound.h 
