--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,7 @@ AC_TYPE_SIZE_T
 dnl Checks for libraries.
 AC_CHECK_LIB( pthread, pthread_create )
 dnl AC_CHECK_LIB( SDL-1.1, SDL_EnableKeyRepeat, , AC_MSG_ERROR( ASC requires SDL 1.1.3 or newer to be installed ) )
-AC_CHECK_LIB( bz2, bzReadOpen )
+AC_CHECK_LIB( bz2, BZ2_bzReadOpen,, AC_MSG_ERROR( ASC requires bz2-1.0.0 . You can get it from http://sourceware.cygnus.com/bzip2 ))
 
 SDL_VERSION=1.1.3
       AM_PATH_SDL($SDL_VERSION,
