--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,5 +1,5 @@
 ####### kdevelop will overwrite this part!!! (begin)##########
 
-SUBDIRS = triangul 
+SUBDIRS = triangul bzlib
 
 ####### kdevelop will overwrite this part!!! (end)############
