--- a/config.h.in
+++ b/config.h.in
@@ -15,9 +15,6 @@
 /* Define if you have the itoa function.  */
 #undef HAVE_ITOA
 
-/* Define if you have the kbhit function.  */
-#undef HAVE_KBHIT
-
 /* Define if you have the select function.  */
 #undef HAVE_SELECT
 
@@ -27,11 +24,17 @@
 /* Define if you have the <dirent.h> header file.  */
 #undef HAVE_DIRENT_H
 
+/* Define if you have the <limits> header file.  */
+#undef HAVE_LIMITS
+
 /* Define if you have the <malloc.h> header file.  */
 #undef HAVE_MALLOC_H
 
 /* Define if you have the <ndir.h> header file.  */
 #undef HAVE_NDIR_H
+
+/* Define if you have the <stdexception> header file.  */
+#undef HAVE_STDEXCEPTION
 
 /* Define if you have the <strings.h> header file.  */
 #undef HAVE_STRINGS_H
