--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -68,12 +68,12 @@ SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
 bin_PROGRAMS = asc
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp
-asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2 -lSDL_image
+asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp
+asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image libs/bzlib/libbz2.a
 
 SUBDIRS = docs sdl libs mapedit tools
 
-EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h unitctrl.cpp unitctrl.h artint.cpp
+EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h unitctrl.cpp unitctrl.h artint.cpp vehicletype.cpp buildingtype.cpp
 
 CXXFLAGS = @CXXFLAGS@ -I./ -Dsgmain -DHEXAGON -DFREEMAPZOOM -funsigned-char -D_NOASM_ -DNEWKEYB
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -91,8 +91,10 @@ stack.o spfst.o sgstream.o sg.o pd.o palette.o newfont.o network.o \
 missions.o misc.o loadpcxc.o loaders.o loadbi3.o gui.o gamedlg.o \
 dlg_box.o dialog.o controls.o building.o basestrm.o basegfx.o attack.o \
 artint.o CLoadable.o Property.o PropertyGroup.o gameoptions.o Named.o \
-astar2.o
-asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a
+astar2.o vehicletype.o buildingtype.o containerbase.o mapalgorithms.o \
+viewcalculation.o
+asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a \
+libs/bzlib/libbz2.a
 asc_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
@@ -107,13 +109,14 @@ TAR = tar
 GZIP_ENV = --best
 DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/artint.P .deps/astar2.P .deps/attack.P \
-.deps/basegfx.P .deps/basestrm.P .deps/building.P .deps/controls.P \
-.deps/dialog.P .deps/dlg_box.P .deps/gamedlg.P .deps/gameoptions.P \
-.deps/gui.P .deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P \
-.deps/misc.P .deps/missions.P .deps/network.P .deps/newfont.P \
-.deps/palette.P .deps/pd.P .deps/sg.P .deps/sgstream.P \
-.deps/soundList.P .deps/spfst.P .deps/stack.P .deps/strtmesg.P \
-.deps/typen.P .deps/unitctrl.P .deps/weather.P
+.deps/basegfx.P .deps/basestrm.P .deps/building.P .deps/buildingtype.P \
+.deps/containerbase.P .deps/controls.P .deps/dialog.P .deps/dlg_box.P \
+.deps/gamedlg.P .deps/gameoptions.P .deps/gui.P .deps/loadbi3.P \
+.deps/loaders.P .deps/loadpcxc.P .deps/mapalgorithms.P .deps/misc.P \
+.deps/missions.P .deps/network.P .deps/newfont.P .deps/palette.P \
+.deps/pd.P .deps/sg.P .deps/sgstream.P .deps/soundList.P .deps/spfst.P \
+.deps/stack.P .deps/strtmesg.P .deps/typen.P .deps/unitctrl.P \
+.deps/vehicletype.P .deps/viewcalculation.P .deps/weather.P
 SOURCES = $(asc_SOURCES)
 OBJECTS = $(asc_OBJECTS)
 
